# local-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose-adk.yml  docker-compose-db.yml  docker-compose-pydantic-ai.yml  docker-compose-streamlit.yml  docker-compose-template.yml  docker-compose-web.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/backends/pydantic_ai/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backends/pydantic_ai/migrations/: env.py
apps/backends/pydantic_ai/migrations/versions/: 001_initial_migration.py  002_seed_demo_user.py  003_add_last_login_to_users.py  004_update_demo_user_password.py
apps/backends/pydantic_ai/src/: main.py
apps/backends/pydantic_ai/src/api/: __init__.py  exceptions.py  schemas.py  validators.py
apps/backends/pydantic_ai/src/api/middleware/: __init__.py  auth.py  error_handler.py
apps/backends/pydantic_ai/src/api/routes/: agents.py  auth.py  evaluations.py  health.py  sessions.py  tools.py  websocket.py  workflows.py
apps/backends/pydantic_ai/src/config/: __init__.py  settings.py
apps/backends/pydantic_ai/src/database/: __init__.py  base.py  models.py
apps/backends/pydantic_ai/src/observability/: __init__.py  instrumentation.py
apps/backends/pydantic_ai/src/services/: __init__.py
apps/backends/pydantic_ai/src/services/agents/: __init__.py  agent_service.py
apps/backends/pydantic_ai/src/services/auth/: __init__.py  jwt_service.py
apps/backends/pydantic_ai/src/services/evaluations/: __init__.py  evaluation_service.py
apps/backends/pydantic_ai/src/services/models/: __init__.py  providers.py
apps/backends/pydantic_ai/src/services/sessions/: __init__.py  session_service.py
apps/backends/pydantic_ai/src/services/tools/: __init__.py  tool_service.py
apps/backends/pydantic_ai/src/services/workflows/: __init__.py  workflow_service.py
apps/backends/pydantic_ai/src/tools/: __init__.py  base.py  registry.py
apps/backends/pydantic_ai/src/tools/builtin/: __init__.py  calculator.py  web_search.py
apps/backends/pydantic_ai/src/tools/filesystem/: __init__.py  diff_tools.py  file_operations.py  search_tools.py
apps/backends/pydantic_ai/tests/: test_basic.py
apps/backends/pydantic_ai/tests/integration/: test_error_handling_integration.py  test_observability_integration.py
apps/backends/pydantic_ai/tests/unit/: test_validators.py
docs/: README.md  adding_sub_agents.md  (+18 more)
(+78 files in other folders)
